--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,23 +10,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      # 1. 저장소 체크아웃
+      - uses: actions/checkout@v4
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      # 2. JDK 21 설치
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
-    - name: Set execute permission for Gradle
-      run: chmod +x gradlew
+      # 3. Gradle 실행 권한 부여
+      - name: Grant execute permission for Gradle
+        run: chmod +x gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build --no-daemon
+      # 4. Gradle 빌드 실행
+      - name: Build with Gradle
+        run: ./gradlew build --no-daemon
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: Mod-JAR
-        path: build/libs/*.jar
+      # 5. 빌드 결과 업로드 (JAR 파일)
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: mod-jar
+          path: build/libs/*.jar
