--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,28 +8,37 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # 1. 저장소 체크아웃
       - uses: actions/checkout@v4
 
-      # 2. JDK 21 설치
+      # JDK 21 설정
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      # 3. Gradle 실행 권한 부여
-      - name: Grant execute permission for Gradle
+      # gradlew 실행 권한 부여
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 4. Gradle 빌드 실행
+      # Gradle 캐시
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      # Gradle 빌드
       - name: Build with Gradle
         run: ./gradlew build --no-daemon
 
-      # 5. 빌드 결과 업로드 (JAR 파일)
-      - name: Upload Artifact
+      # 빌드 결과 업로드 (JAR 파일)
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: mod-jar
